website/versioned_docs/version-2.11.x/reference/targets/protobuf_sources.mdx
---
title: protobuf_sources
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `protobuf_source` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.codegen.protobuf.python`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>
Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.
</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>
A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.
</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*.proto',)`}
>
A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.ext', 'test_*.ext', '!test_ignore.ext']`.
</Field>

## `overrides`

<Field
    type_repr={`field.type_hint`}
>
Override the field values for generated `protobuf_source` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
```
overrides=&#123;
  &quot;foo.proto&quot;: &#123;&quot;grpc&quot;: True]&#125;,
  &quot;bar.proto&quot;: &#123;&quot;description&quot;: &quot;our user model&quot;]&#125;,
  (&quot;foo.proto&quot;, &quot;bar.proto&quot;): &#123;&quot;tags&quot;: [&quot;overridden&quot;]&#125;,
&#125;
```

File paths and globs are relative to the BUILD file&#x27;s directory. Every overridden file is validated to belong to this target&#x27;s `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `protobuf_source` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.
</Field>

## `skip_buf_format`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.codegen.protobuf.lint.buf"
>
If true, don&#x27;t run `buf format` on this target&#x27;s code.
</Field>

## `skip_buf_lint`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.codegen.protobuf.lint.buf"
>
If true, don&#x27;t run `buf lint` on this target&#x27;s code.
</Field>

## `python_interpreter_constraints`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.codegen.protobuf.python"
>
The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. You can leave off `CPython` as a shorthand, e.g. `>=2.7` will be expanded to `CPython>=2.7`.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python].interpreter_constraints`.

See https://www.pantsbuild.org/v2.11/docs/python-interpreter-compatibility for how these interpreter constraints are merged with the constraints of dependencies.
</Field>

## `python_resolve`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.codegen.protobuf.python"
>
The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.
</Field>

## `python_source_root`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.codegen.protobuf.python"
>
The source root to generate Python sources under.

If unspecified, the source root the `protobuf_sources` is under will be used.
</Field>

## `jvm_jdk`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.experimental.codegen.protobuf.java"
>
The major version of the JDK that this target should be built with. If not defined, will default to `[jvm].default_source_jdk`.
</Field>

## `jvm_resolve`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.experimental.codegen.protobuf.java"
>
The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

## `grpc`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>
Whether to generate gRPC code or not.
</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>
Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.11/docs/targets#target-addresses and https://www.pantsbuild.org/v2.11/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.
</Field>



</span>